# django-nepkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  RELEASE-NOTES.md  pyproject.toml  pytest.ini  setup.py  todo.md
.github/workflows/: django-ci.yml  pre-commit.yml  publish.yml
django_nepkit/: __init__.py  admin.py  conf.py  constants.py  filters.py  forms.py  lang_utils.py  models.py  serializers.py  utils.py  validators.py  views.py  widgets.py
django_nepkit/static/js/: address-chaining.js  nepali-datepicker-init.js
django_nepkit/templatetag/: nepali.py
django_nepkit/templatetags/: nepali.py
django_nepkit/tests/: README.md  __init__.py  conftest.py  settings.py  test_address_normalization.py  test_admin_currency.py  test_api_enhancements.py  test_conf.py  test_currency_and_words.py  test_filters.py  test_forms.py  test_lang_utils.py  test_location_utils.py  test_models.py  test_serializers.py  test_utils.py  test_validators.py  test_views.py  test_widgets.py
docs/: migration_guide.py
example/: manage.py  requirements.txt
example/demo/: admin.py  models.py  serializers.py  urls.py  views.py
example/demo/migrations/: 0001_initial.py  0002_alter_person_district_en_and_more.py  0002_alter_person_phone_number.py  0003_alter_person_birth_date_alter_person_birth_date_en_and_more.py  0003_person_created_at_person_updated_at.py  0004_alter_person_created_at_alter_person_updated_at.py  0004_rename_birth_date_en_person_birth_date_ne_and_more.py  0005_alter_person_created_at_alter_person_updated_at.py  0005_citizen.py  0006_alter_citizen_district_alter_citizen_province.py  0007_auditedperson.py
example/demo/templates/demo/: person_form.html  (+3 more)
example/example_project/: settings.py  urls.py
(+5 files in other folders)
